--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -7,5 +7,6 @@
 </ul> 
 </div>-->
 <div class="container" style="margin-top: 100px;">
-  <app-home></app-home>
+  <!-- <app-home></app-home> -->
+  <router-outlet></router-outlet>
 </div>
