--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,22 +1,24 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Dating App</a>
-        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser()"> <!--async pipe takes care of unsubscription from the observable-->
+      <a routerLink="/" routerLinkActive="active" class="navbar-brand" href="#">Dating App</a>
+        <ul class="navbar-nav me-auto mb-2 mb-md-0"> <!--async pipe takes care of unsubscription from the observable-->
+          <ng-container *ngIf="accountService.currentUser()">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Matches</a>
+            <a routerLink="/members" routerLinkActive="active" class="nav-link" aria-current="page" href="#">Matches</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Lists</a>
+            <a routerLink="/lists" routerLinkActive="active" class="nav-link" href="#">Lists</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Messages</a>
+            <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
           </li>
           <li class="nav-item" (click)="logout()">
             <a class="nav-link disabled" aria-disabled="true">Logout</a>
           </li>
+        </ng-container> 
         </ul>
         <div class="dropdown" *ngIf="accountService.currentUser()" dropdown>
-            <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome user</a>
+            <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome {{accountService.currentUser()?.userName | titlecase}}</a>
             <div class="dropdown-menu" *dropdownMenu>
                 <a class="dropdown-item">Edit Profile</a>
                 <a class="dropdown-item" (click)="logout()">Logout</a>
@@ -25,7 +27,7 @@
         <form *ngIf="!(accountService.currentUser())" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()">
           <input name="userName" [(ngModel)]="model.username" class="form-control me-2" type="text" placeholder="Username">
           <input name="password" [(ngModel)]="model.password" class="form-control me-2" type="password" placeholder="Password">
-          <button class="btn btn-outline-success" type="submit">Login</button>
+          <button class="btn btn-success" type="submit">Login</button>
         </form>
       </div>
   </nav>
