--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -43,7 +43,7 @@
                     <p>{{member.interests}}</p>
                 </tab>
                 <tab heading="Photos" #photoTab="tab"> <!--gallery tag seems to have an issue when used inside a <tag> hence we create a variable and use ngIf to get around it.-->
-                    <gallery *ngIf="photoTab.active" [items]="images" class="gallery"></gallery>
+                    <gallery *ngIf="photoTab.active" [items]="images" [itemAutosize]="true" class="gallery"></gallery>
                 </tab>
                 <tab heading="Messages">
                     <p>Messages will go here</p>
