--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -22,6 +22,9 @@
         
         </ul>
         <div class="dropdown" *ngIf="accountService.currentUser()" dropdown>
+            <img 
+            class="me-2"
+            src="{{accountService.currentUser()?.photoUrl || './assets/user.png'}}" alt="user main image">
             <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome {{accountService.currentUser()?.userName | titlecase}}</a>
             <div class="dropdown-menu" *dropdownMenu>
                 <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
