--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,9 +1,75 @@
 <div class="row">
-    
-        <ng-container *ngFor="let member of memberService.members()">
+        <div class="text-center mt-3">
+            <h2>Your matches - {{memberService.paginatedResult()?.pagination?.totalItems}}</h2>
+        </div>
+        <div class="container mt-3">
+            <form #form="ngForm" (ngSubmit)="loadMembers()">
+                <div class="d-flex mx-2">
+                    <label class="col-form-label">Age from: </label>
+                    <input type="number" 
+                    class="form-control ms-1" 
+                    style="width: 85px;" 
+                    name="minAge" 
+                    [(ngModel)]="memberService.userParams().minAge">
+                </div>
+            </form>
+        </div>
+        <div class="container mt-3">
+            <form #form="ngForm" class="d-flex mb-3" (ngSubmit)="loadMembers()">
+                <div class="d-flex mx-2">
+                    <label class="col-form-label">Age to: </label>
+                    <input type="number" 
+                    class="form-control ms-1" 
+                    style="width: 85px;" 
+                    name="maxAge" 
+                    [(ngModel)]="memberService.userParams().maxAge">
+                </div>
+            <!-- </form> -->
+        <!-- </div> -->
+        <!-- <div class="container mt-3"> -->
+            <!-- <form #form="ngForm" (ngSubmit)="loadMembers()"> -->
+                <div class="d-flex mx-2">
+                    <label class="col-form-label">Show: </label>
+                    <select name="gender" style="width: 170px;" class="form-select ms-1" [(ngModel)]="memberService.userParams().gender">
+                        <ng-container *ngFor="let gender of genderList;">
+                            <option [value]="gender.value">
+                                {{gender.display}}
+                            </option>
+                        </ng-container>
+                    </select>
+                </div>
+                <button class="btn btn-primary ms-1" type="submit">Apply filters</button>
+                <button (click)="resetFilters()" class="btn btn-primary ms-1" type="submit">Reset filters</button>
+                <div class="col">
+                    <div class="btn-group float-end">
+                        <button type="button" class="btn btn-primary" name="orderBy" (click)="loadMembers()" btnRadio="lastActive" [(ngModel)]="memberService.userParams().orderBy">Last Active</button>
+                        <button type="button" class="btn btn-primary" name="orderBy" (click)="loadMembers()" btnRadio="created" [(ngModel)]="memberService.userParams().orderBy">Newest Members</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <ng-container *ngFor="let member of memberService.paginatedResult()?.items">
             <div class="col-3" *ngIf="member">
                 <app-member-card [member]="member"></app-member-card>
             </div>
         </ng-container>
     
 </div>
+
+<ng-container *ngIf="memberService.paginatedResult()?.pagination">
+    <div class="d-flex justify-content-center">
+        <pagination [boundaryLinks]="true" 
+            [totalItems]="memberService.paginatedResult()?.pagination!.totalItems" 
+            [itemsPerPage]="memberService.paginatedResult()?.pagination!.itemsPerPage"
+            (pageChanged)="pageChanged($event)"
+            [(ngModel)]="memberService.paginatedResult()?.pagination!.currentPage"
+            [maxSize]="10"
+            previousText="&lsaquo;" 
+            nextText="&rsaquo;"
+            firstText="&laquo;"
+            lastText="&raquo;">
+
+        </pagination>
+    </div>
+</ng-container>
+
