--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -25,7 +25,7 @@
             <img 
             class="me-2"
             src="{{accountService.currentUser()?.photoUrl || './assets/user.png'}}" alt="user main image">
-            <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome {{accountService.currentUser()?.userName | titlecase}}</a>
+            <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome {{accountService.currentUser()?.knownAs}}</a>
             <div class="dropdown-menu" *dropdownMenu>
                 <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
                 <a class="dropdown-item" (click)="logout()">Logout</a>
