--- a/client/src/app/lists/lists.component.html
+++ b/client/src/app/lists/lists.component.html
@@ -10,7 +10,7 @@
               [(ngModel)]="predicate"
               (click)="loadLikes()">
               Members I like
-            </button>
+            </button> <!-- btnRadio is the value that will be set to ngModel(predicate in this case)-->
             <button class="btn btn-primary"
              btnRadio="likedBy"
               [(ngModel)]="predicate"
