--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -12,6 +12,9 @@
           <li class="nav-item">
             <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
           </li>
+          <li *appHasRole="['Admin', 'Moderator']" class="nav-item">
+            <a routerLink="/admin" routerLinkActive="active" class="nav-link">Admin</a>
+          </li>
           <!-- <li class="nav-item" (click)="logout()">
             <a class="nav-link disabled" aria-disabled="true">Logout</a>
           </li> -->
