--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -5,6 +5,9 @@
                 <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img img-thumbnail">
                 <div class="card-body">
                     <div>
+                        <div class="mb-2" *ngIf="presenceService.onlineUsers().includes(member.userName)">
+                            <i class="fa fa-user-circle text-success"></i> Online now
+                        </div>
                         <strong>Location:</strong>
                         <p>{{member.city}}, {{member.country}}</p>
                     </div>
@@ -47,8 +50,6 @@
                 </tab>
                 <tab heading="Messages" (selectTab)="onTabActivated($event)">
                     <app-member-messages [username]="member.userName"
-                     [messages]="messages" 
-                     (updateMessages)="onUpdateMessages($event)"
                      ></app-member-messages>
                 </tab>
             </tabset>
